tooling/nargo_cli/tests/snapshots/execute__tests__signed_cmp_force_brillig_false_inliner_-9223372036854775808.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "",
  "hash": "8831413948342575857",
  "abi": {
    "parameters": [
      {
        "name": "minus_one",
        "type": {
          "kind": "integer",
          "sign": "signed",
          "width": 8
        },
        "visibility": "private"
      }
    ],
    "return_type": null,
    "error_types": {
      "2920182694213909827": {
        "error_kind": "string",
        "string": "attempt to subtract with overflow"
      },
      "5019202896831570965": {
        "error_kind": "string",
        "string": "attempt to add with overflow"
      },
      "7233212735005103307": {
        "error_kind": "string",
        "string": "attempt to multiply with overflow"
      }
    }
  },
  "bytecode": "H4sIAAAAAAAA/+1azW7TQBCe2EmTNL/NT9M0Tc4cOOzaSeOcCEKI52hU585LIM6Id4AjT8EBDrwAR14DiazYEZtd0x78rcFqR7LGXU8ns998s7O2tkK/ZXG4nun7yuEKtVbSOFxVfR+QK2y31VrkEwn0JTLCBflORJCBQWADaF48pozqVlChRxBjcb1cpusolbG8EdFml6zEcrW7TmQiV8nqNkriOE2WyXqz26zFRi7jVO5XmzjdK0lkBeBrrwMLcHMUpSRl5JGUkTgiJXOqyoCE5JKT75VR0wrqvyVlKmRIOFJWwckFky/iPAWW37zzRhZ2SP+msPPGDcuT9FjY8riwa1qfMCBcxGqgYQUQegQsX2cRsgaM68RTItGEq1EZO+B6j/NVXKHwLqvBgHCh1PWgOdag+4tH5JJjEPMWT51wpGxQGUmJfFdICiMl77JOGRAmYJPcbZky8ktK5LuCkE3CkfIUnFzUSq7nGnMyfS4SIoesD0Ai89HCcU6YHG/R/R8Z0FvfJrB+cLgUtwi1te4QHS84HXIXnGpJwM+7eLWBc+x4IgV6O9qmcnZ+3I5lv88I10vRdbXuMSBcdF1yO78y8t35G4Qrni7hSNkDJrecpCyuE/S1PmNAmIB9ckmpjMpEyj7hSHkGTG6RpMQVU3GkHGg9ZECYgANySamMfJOyRzhSDghHyqGn5KLxQxYiEr8RYbc/zE1b0EWNjNuMd+wz4LEHv+dAMvia97kBMMivl1j7Olb0O0afsEWmpFyds7iTCBOtLxgQ7pITcjunMvJ9EgHXORM5IRwpL+iBk7LAkwhTrS8ZECbglFxSKiPfJxFgpEyFnBKOlJfg5KJPIkx0ztCfY5GFPaXHbpMRrpduM9P6igHhIp6RW9jKqEzdZkY4Ul7RAyflAaeMcL10m7nWCwaECTgnl5TKqEzdZk44Ui7AyUV3m5nOGbrbIAt7jpuv4HOYJpZZEhr3vN//+v7b549vb25NO16dxz+eT19/+fDSfPZU6xc/v7/69O7NEx5nrPmD2tFpBfpTO1vMnCP23/LjX9gNx5yL+bv2/KsZ/1f5y9+Bpe+yvevjUCfjGfscam3Gy/NoWnps+AViKdn/yI//zFyNjfuRNU8T7y0oBvbHNVYjVwLrGdvaNVPBx+c00TDjt1iYMyNjjPH8Bf3Rvh76MQAA",
  "debug_symbols": "lddLioNAFEbhvdQ4A+vWQ8utNE3wGQRR8dHQSPbeJkQIRmjOsKz/c3IyiKsqq3y5XZuu7ieVfq2q7YtsbvpuO61KPx9NQ9Y9TtOcjbNKjb+oqitVasP9ouqmrVTqovv3RQmbGza3bO7Y3LN5zOYJmwc219HZ3pvXPpHjXsO9wL2B+9O02u5Au+QoHBYeixiLBItAhURYaCwEC4MFbi64ueDmgpvLf8398dcugQoTYaGxECwMFhYLh4XHIsYCNze4ucXNLW5ucXOLm1vc3J43j90uwsc/A49FjEWCRaDCRVhoLAQLg8Vpc9F7czEfwmHhsYixSLAIVPgIC42FMLEd8rFp2+Z2ff8c2B7/ZGOT5W31OtZLV7zdzr/DfrP7YeyLqlzG6vGm5932+j8=",
  "file_map": {
    "50": {
      "source": "fn main(minus_one: i8) {\n    assert(minus_one < 0);\n    assert(0 < minus_one as u8);\n    assert(0 > minus_one);\n    let most_negative_number = minus_one * 127 - 1;\n    assert(most_negative_number < 0);\n    assert(127 > most_negative_number);\n}\n",
      "path": ""
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": [
    "directive_integer_quotient",
    "directive_invert"
  ]
}
