tooling/nargo_cli/tests/snapshots/execute__tests__signed_cmp_force_brillig_true_inliner_-9223372036854775808.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "",
  "hash": "17842874025491747390",
  "abi": {
    "parameters": [
      {
        "name": "minus_one",
        "type": {
          "kind": "integer",
          "sign": "signed",
          "width": 8
        },
        "visibility": "private"
      }
    ],
    "return_type": null,
    "error_types": {
      "2920182694213909827": {
        "error_kind": "string",
        "string": "attempt to subtract with overflow"
      },
      "5019202896831570965": {
        "error_kind": "string",
        "string": "attempt to add with overflow"
      },
      "7233212735005103307": {
        "error_kind": "string",
        "string": "attempt to multiply with overflow"
      },
      "17843811134343075018": {
        "error_kind": "string",
        "string": "Stack too deep"
      }
    }
  },
  "bytecode": "H4sIAAAAAAAA/81XwW7bMAyV5Ki2WnSH7bLTvkFq7NjBLj7ssttu22UDXHveb+TTV6MSTLxQaoDIQQUEkk2K5HuUaEaKdUg/7+BZMDq9n+11w2W0ZdlAUyPo/POz8bMi8iIjWAN+c9rvbN0YBl/G+PfG29ySn2BzA/u29Ha+nVb7iEWQOejhnuX3SNaoU3l5WH/wawN7tsj/hvmxn5j4g68Hj/UXYKWxyIyxBPt3m9jvbLAXiiH1QfGjf83oq4R+OGuavKMFWAOfWJz7LHit0xDPZ/Crid+cZ+oj4KG+CnFeDySsufhynjMJeaN5Qk6oPOh/eQc8bstROyNHSvB3BfNaEhm9F4roVOR9CfEXzN4K7JjI3j4L9rVOBL9anN9t6l8xsrCXcmMgXpTLyH58pxj9YNsw9vscvLjXZmyxew84uDg4TIU4x2QSmO5BV0b44PBXufG/3IlLYq4S+Gkvt12c84z8lYk4Neg2fl7kfy7AgveW5gRrPN4hKiuZ2FL3kDtXGvS/EixDAgt+v00k/t4/2+uGkxGcMVyP4u1zlvqecrm5i/jmvolcvVYJm8gl2uNqKMpoT2QScdPvkxDxOpyyz31rsHf67udFPvm1ifjo/bO9anRnfQr1IRMYS0ZfXcAJzRHlpIxw8gN42Oo/CtcHKfC9dS/A1SzJcJTKmU7oK+AYzzHey6D/E3iQN8xBWD+I9Y7uTvn9t91rz76M4rTygP0E9a9B/7d/pr1LmHdXxDm3g5v3wzw0wzTV44A8LYP+n87t/1AfXNcN3XgY52M9Pt/af90M7Ti0zh1r97d2za39P3Xd4fj0bOt2Guep3r/l/z+/pxQfHRUAAA==",
  "debug_symbols": "ldfNasJAFIbhe5l1FpmZc+Ynt1JKiRolEBKJsVDEe29SFCRNKe9GGPkeIrwLMzdzaHbX00fbH4eLqd5uphv29dQO/Xy63QuzG9uua08fr1+bcvmw+rO/nOt+OV6mepxM5UNhmv5gKsmzPrZdYyot7++FsQHuI9wnuM9s70q4t3Dv4N7DvWztQ3zsk1vvN/sG/+c+wH2E+wT3me39Zl8rT2A1rYXFwmHhsRAsFIuARcQiYZGpENxccHPBzQU3F9xccHPBzQU3F9xccHPFzRU3V9xccXPFzRU3V9xccXPFzRU3D/81D+t/g2CxcFh4LAQLxSJgEbFIWGQqIm4ecfOIm8ft5lGfIq/f26JgoVgELCIWCYtMRdps7uyzh/O/hMXCYeGxECwUi8DEfT591mNb77rmcTk8Xvv9y11x+jo3q2vjeRz2zeE6NssF8uXuuHRKqch+/iF2SWDLsrClm58yP+kb",
  "file_map": {
    "50": {
      "source": "fn main(minus_one: i8) {\n    assert(minus_one < 0);\n    assert(0 < minus_one as u8);\n    assert(0 > minus_one);\n    let most_negative_number = minus_one * 127 - 1;\n    assert(most_negative_number < 0);\n    assert(127 > most_negative_number);\n}\n",
      "path": "/Users/asterite/Projects/noir/test_programs/execution_success/signed_cmp/src/main.nr"
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": [
    "main"
  ]
}
